--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,10 +8,14 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+    <title>TinyApp</title>
   </head>
 
   <body>
+    <header>
+      <%- include('./partials/_header') %>
+    </header>
+
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
