--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,19 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <div>
+          <% if(!username) {%>
+          <form action="/login" method="post">
+            <input type="text" name="username" placeholder="username" />
+            <button type="submit">Login</button>
+          </form>
+          <% } else {%>
+          <form action="/logout" method="post">
+            <span>Logged In As: <%= username %></span>
+            <button type="submit">Logout</button>
+          </form>
+          <% } %>
+        </div>
       </div>
     </div>
   </nav>
