--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,16 +18,25 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <div>
           <% if(!username) {%>
-          <form action="/login" method="post">
-            <input type="text" name="username" placeholder="username" />
-            <button type="submit">Login</button>
+          <form class="form-inline" action="/login" method="post">
+            <input
+              class="form-control mr-sm-2"
+              type="text"
+              name="username"
+              placeholder="username"
+            />
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+              Login
+            </button>
           </form>
           <% } else {%>
-          <form action="/logout" method="post">
-            <span>Logged In As: <%= username %></span>
-            <button type="submit">Logout</button>
+          <form class="form-inline" action="/logout" method="post">
+            <span class="navbar-text">Logged In As: <%= username %></span>
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+              Logout
+            </button>
           </form>
-          <% } %>
+          <% }%>
         </div>
       </div>
     </div>
