--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,46 +1,33 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse d-flex" id="navbarNavAltMarkup">
-      <div class="navbar-nav p-2 flex-grow-1">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
-      <div class="p-2">
-        <% if(!username) {%>
-        <form class="form-inline" action="/login" method="post">
-          <input
-            class="form-control mr-sm-2"
-            type="text"
-            name="username"
-            placeholder="username"
-          />
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-            Login
-          </button>
-        </form>
-        <% } else {%>
-        <form class="form-inline" action="/logout" method="post">
-          <span class="navbar-text" style="padding-right: 8px"
-            >Logged In As: <%= username %></span
-          >
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-            Logout
-          </button>
-        </form>
-        <% }%>
-      </div>
+  <nav class="navbar d-flex navbar-expand-md navbar-dark bg-success">
+    <div class="navbar p-2 flex-grow-1 justify-content-start">
+      <a class="navbar-brand" href="/urls">TinyApp</a>
+      <a class="nav-item nav-link" href="/urls">My URLs</a>
+      <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+    </div>
+    <div class="p-2">
+      <% if(!username) {%>
+      <form class="form-inline" action="/login" method="post">
+        <input
+          class="form-control mr-sm-2"
+          type="text"
+          name="username"
+          placeholder="username"
+        />
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+          Login
+        </button>
+      </form>
+      <% } else {%>
+      <form class="form-inline" action="/logout" method="post">
+        <span class="navbar-text" style="padding-right: 8px"
+          >Logged In As: <%= username %></span
+        >
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+          Logout
+        </button>
+      </form>
+      <% }%>
     </div>
   </nav>
 </header>
