finish register feature

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,8 +16,8 @@
     <%- include('./partials/_header') %>
 
     <div style="width: 50%; margin: 10px 10px">
-      <h1>Register</h1>
-      <form action="/register" method="POST">
+      <h1>Login</h1>
+      <form action="/login" method="POST">
         <div class="form-group">
           <label for="email">Email address</label>
           <input
@@ -36,7 +36,7 @@
             placeholder="Password"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
     <script
