--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,22 +6,21 @@
       <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
     </div>
     <div class="p-2">
-      <% if(!username) {%>
-      <form class="form-inline" action="/login" method="post">
-        <input
-          class="form-control mr-sm-2"
-          type="text"
-          name="username"
-          placeholder="username"
-        />
+      <% if(!user) {%>
+      <a href="/login">
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
           Login
         </button>
-      </form>
+      </a>
+      <a href="/register">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+          Register
+        </button>
+      </a>
       <% } else {%>
       <form class="form-inline" action="/logout" method="post">
         <span class="navbar-text" style="padding-right: 8px"
-          >Logged In As: <%= username %></span
+          >Logged In As: <%= user['email'] %></span
         >
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
           Logout
