--- a/views/needlogin.ejs
+++ b/views/needlogin.ejs
@@ -14,34 +14,31 @@
   </head>
   <body>
     <%- include('./partials/_header') %>
-    <main style="margin: 1em;">
-      <h3>My URLs</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Short URL</th>
-            <th scope="col">Long URL</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% for(let url in urls) { %>
-          <tr>
-            <td><a href=<%= "/u/" + url %>><%= url %></a></td>
-            <td><%= urls[url] %></td>
-            <td><a href=<%= "/urls/" + url %>><button>Edit</button></a></td>
-            <td>
-              <form method="POST" action=<%= "/urls/" + url + "/delete" %>>
-              <button type="submit">Delete</button>
-              </form>
-            </td>
-          </tr>
-          <% } %>
-        </tbody>
-      </table>
-    </main>
 
+    <div style="width: 50%; margin: 10px 10px">
+      <h1>Please Login First!</h1>
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            placeholder="Enter email"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            placeholder="Password"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
