ejs templates organized

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -13,7 +13,7 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('./partials/_header') %> <%- include('./partials/_register') %>
+    <%- include('./partials/_header') %> <%- include('./partials/_error') %>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
