--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,34 +13,7 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('./partials/_header') %>
-    <main style="margin: 1em;">
-      <h3>My URLs</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Short URL</th>
-            <th scope="col">Long URL</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% for(let url in urls) { %>
-          <tr>
-            <td><a href=<%= "/u/" + url %>><%= url %></a></td>
-            <td><%= urls[url] %></td>
-            <td><a href=<%= "/urls/" + url %>><button>Edit</button></a></td>
-            <td>
-              <form method="POST" action=<%= "/urls/" + url + "/delete" %>>
-              <button type="submit">Delete</button>
-              </form>
-            </td>
-          </tr>
-          <% } %>
-        </tbody>
-      </table>
-    </main>
+    <%- include('./partials/_header') %> <%- include('./partials/_index') %>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
