--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,25 +12,8 @@
   </head>
 
   <body>
-    <%- include('./partials/_header') %>
+    <%- include('./partials/_header') %> <%- include('./partials/_show') %>
 
-    <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
-        </p>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Edit</h3>
-        <form method="POST" action=<%= "/urls/" + shortURL %>>
-          <label for="longURL">New URL:</label>
-          <input type="text" name="longURL" placeholder="http://" />
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
