--- a/views/warning.ejs
+++ b/views/warning.ejs
@@ -13,32 +13,8 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('./partials/_header') %>
+    <%- include('./partials/_header') %> <%- include('./partials/_warning') %>
 
-    <div style="width: 50%; margin: 10px 10px">
-      <h1>Please Login First!</h1>
-      <form action="/login" method="POST">
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            placeholder="Enter email"
-          />
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            placeholder="Password"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
