--- a/views/partials/_show.ejs
+++ b/views/partials/_show.ejs
@@ -5,6 +5,12 @@
     <p class="card-text">
       Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
     </p>
+    <p class="card-text">
+      Created Date: <%= createDate %>
+    </p>
+    <p class="card-text">
+      Times of visited: <%= visited %>
+    </p>
   </div>
   <div class="card-body">
     <h3 class="card-title">Edit</h3>
